fix: 회원 수정 페이지에서 회원 이메일이 반영되도록 수정

--- a/layout/update-member-container.html
+++ b/layout/update-member-container.html
@@ -21,7 +21,7 @@
                 <label for="email">이메일*</label>
             </div>
             <div class="layout-input-container">
-                <div id="email">
+                <div id="email" class="email-form">
                     startupcode@gmail.com
                 </div>
             </div>
